--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "midmes-ai-chatbot",
   "version": "1.0.0",
-  "description": "MIDMES AI Chatbot",
+  "description": "MIDMES AI Chatbot with Gemini",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "axios": "^1.6.0"
   }
 }
