--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "midmes-ai-chatbot",
   "version": "1.0.0",
-  "description": "MIDMES AI Chatbot with Gemini",
+  "description": "MIDMES AI Chatbot",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
